# macrohack

./: Problem_1_yield_curve_predict.xlsx  README.md  ar_imax_exp_window.py  ar_imax_plots.py  arima_arma_rmse.py  arima_arma_rmse_v2.py  beta_forecast_model2.csv  code4.py  config.yaml  macro_forecast_model2.csv  macrohack_code4_demo.ipynb  main.py  nelson.ipynb  nelson_with_kalman_filter.r  pipeline.py  problem_1_run.ipynb  pyproject.toml  var.py  var_all_exog.py  var_endog.py
data/: iv_surface.csv  macro.xlsx  yield_curve.csv  yield_curve.xlsx
data/inputs/: macro_updated.xlsx  macro_updated_3.xlsx
data/ns_results/: betas_0_7308.csv  betas_best_lambda.csv  ns.xlsx  ns_betas_kalman.csv  ns_fitted_kalman.csv  ns_forecast_kalman.csv
forecast/: arimax_beta_forecast_mean.csv  arimax_rmse_beta.csv  arimax_rmse_yield_curve.csv  arimax_yield_curve_forecast_mean.csv  beta_forecast_best_ARIMAX.csv
outputs/: cv_summary.xlsx  var_m1_backtest_beta.csv  var_m1_final_beta.csv  var_m2_backtest_beta.csv  var_m2_final_beta.csv
