[project]
name = "macrohack-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scipy>=1.14.1",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
